# landlord-management

./: main.py  manage.py  pyproject.toml
costs/: admin.py  models.py
costs/migrations/: 0001_initial.py  0002_cost_cost_is_paid.py
django_landlord_management/: asgi.py  settings.py  urls.py  wsgi.py
flats/: models.py
flats/management/commands/: populate_db.py
flats/migrations/: 0001_initial.py
rents/: admin.py  models.py
rents/migrations/: 0001_initial.py  0002_initial.py  0003_remove_rent_due_date_remove_rent_is_paid_and_more.py
tenants/: admin.py  models.py
tenants/migrations/: 0001_initial.py  0002_tenant_firstname_tenant_lastname_and_more.py  0003_remove_tenant_firstname_remove_tenant_lastname_and_more.py  0004_remove_tenant_flat.py  0005_tenant_flat.py  0006_remove_tenant_username.py
