[tool.poetry]
name = "landlord-management"
version = "0.1.0"
description = ""
authors = ["bgozlinski <BARTLOMIEJ.GOZLINSKI@GMAIL.COM>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
psycopg2 = "^2.9.9"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
